--- a/workspaces/marketplace/plugins/marketplace/package.json
+++ b/workspaces/marketplace/plugins/marketplace/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@red-hat-developer-hub/backstage-plugin-marketplace",
-  "version": "0.1.0",
+  "version": "0.0.0",
   "main": "src/index.ts",
   "types": "src/index.ts",
   "license": "Apache-2.0",
@@ -63,6 +63,7 @@
     "react-router-dom": "^6.3.0"
   },
   "files": [
+    "app-config.dynamic.yaml",
     "dist"
   ]
 }
