--- a/workspaces/marketplace/plugins/marketplace-common/package.json
+++ b/workspaces/marketplace/plugins/marketplace-common/package.json
@@ -40,5 +40,9 @@
   },
   "files": [
     "dist"
-  ]
+  ],
+  "dependencies": {
+    "@backstage/catalog-model": "^1.7.0",
+    "@backstage/types": "^1.2.0"
+  }
 }
