--- a/workspaces/orchestrator/plugins/orchestrator-swf-editor-envelope/package.json
+++ b/workspaces/orchestrator/plugins/orchestrator-swf-editor-envelope/package.json
@@ -38,7 +38,8 @@
     "@kie-tools/serverless-workflow-combined-editor": "^0.32.0",
     "@kie-tools/serverless-workflow-diagram-editor-assets": "^0.32.0",
     "@kie-tools/serverless-workflow-diagram-editor-envelope": "^0.32.0",
-    "@kie-tools/serverless-workflow-text-editor": "^0.32.0"
+    "@kie-tools/serverless-workflow-text-editor": "^0.32.0",
+    "monaco-editor": "^0.52.2"
   },
   "devDependencies": {
     "@backstage/cli": "0.28.2",
@@ -46,9 +47,8 @@
     "css-loader": "6.11.0",
     "filemanager-webpack-plugin": "8.0.0",
     "html-webpack-plugin": "5.6.3",
-    "monaco-editor": "0.52.2",
-    "monaco-editor-webpack-plugin": "7.1.0",
-    "monaco-yaml": "5.2.3",
+    "monaco-editor-webpack-plugin": "^7.1.0",
+    "monaco-yaml": "^5.2.3",
     "node-polyfill-webpack-plugin": "3.0.0",
     "prettier": "3.4.2",
     "sass": "1.83.0",
