--- a/workspaces/theme/plugins/theme/package.json
+++ b/workspaces/theme/plugins/theme/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@red-hat-developer-hub/backstage-plugin-theme",
-  "version": "0.4.9",
+  "version": "0.4.8",
   "description": "Red Hat Developer Hub Theme",
   "main": "src/index.ts",
   "types": "src/index.ts",
@@ -26,8 +26,7 @@
     "test": "backstage-cli package test",
     "clean": "backstage-cli package clean",
     "prepack": "backstage-cli package prepack",
-    "postpack": "backstage-cli package postpack",
-    "prepublish": "./fix-style-inject-imports.sh"
+    "postpack": "backstage-cli package postpack"
   },
   "peerDependencies": {
     "@backstage/core-plugin-api": "^1.10.0",
