feat(global-header): initial PR for global header plugin (#203)
* feat(global-header): initial PR for global header plugin

Signed-off-by: Yi Cai <yicai@redhat.com>

* split GlobalHeader into small modulars

Signed-off-by: Yi Cai <yicai@redhat.com>

* cleaned comments

Signed-off-by: Yi Cai <yicai@redhat.com>

* added a backstage app for testing and updated codeowners

Signed-off-by: Yi Cai <yicai@redhat.com>

* updated yarn.lock and codeownders

Signed-off-by: Yi Cai <yicai@redhat.com>

* updated codeownders

Signed-off-by: Yi Cai <yicai@redhat.com>

* hide items from sidebar if displayed in header

Signed-off-by: Yi Cai <yicai@redhat.com>

* Removed mui/base reference

Signed-off-by: Yi Cai <yicai@redhat.com>

* Dedupe yarn.lock

Signed-off-by: Yi Cai <yicai@redhat.com>

* Added report.api.md

Signed-off-by: Yi Cai <yicai@redhat.com>

* Align up package version

Signed-off-by: Yi Cai <yicai@redhat.com>

* fix ci failure

Signed-off-by: Yi Cai <yicai@redhat.com>

* Fix failed tests

Signed-off-by: Yi Cai <yicai@redhat.com>

---------

Signed-off-by: Yi Cai <yicai@redhat.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -12,3 +12,4 @@
 /workspaces/theme                                   @christoph-jerolimov @ciiay @debsmita1
 /workspaces/lightspeed                              @karthikjeeyar @yangcao77 @rohitkrai03
 /workspaces/orchestrator                            @batzionb @mareklibra @gciavarrini
+/workspaces/global-header                           @christoph-jerolimov @ciiay
