feat(fab): add global floating button (#214)

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -13,3 +13,4 @@
 /workspaces/lightspeed                              @karthikjeeyar @yangcao77 @rohitkrai03
 /workspaces/orchestrator                            @batzionb @mareklibra @gciavarrini
 /workspaces/global-header                           @christoph-jerolimov @ciiay
+/workspaces/global-floating-action-button           @christoph-jerolimov @debsmita1
