--- a/workspaces/marketplace/plugins/catalog-backend-module-marketplace/package.json
+++ b/workspaces/marketplace/plugins/catalog-backend-module-marketplace/package.json
@@ -5,7 +5,6 @@
   "main": "src/index.ts",
   "types": "src/index.ts",
   "license": "Apache-2.0",
-  "private": true,
   "publishConfig": {
     "access": "public",
     "main": "dist/index.cjs.js",
@@ -41,10 +40,9 @@
     "@backstage/catalog-model": "^1.7.1",
     "@backstage/plugin-catalog-common": "^1.1.0",
     "@backstage/plugin-catalog-node": "^1.13.1",
+    "@backstage/types": "^1.2.0",
     "@red-hat-developer-hub/backstage-plugin-marketplace-common": "workspace:^",
-    "express": "^4.17.1",
-    "glob": "^10.4.5",
-    "yaml": "^2.6.0"
+    "semver": "^7.6.3"
   },
   "devDependencies": {
     "@backstage/backend-test-utils": "^1.0.2",
