--- a/workspaces/lightspeed/plugins/lightspeed/package.json
+++ b/workspaces/lightspeed/plugins/lightspeed/package.json
@@ -44,8 +44,8 @@
     "@material-ui/core": "^4.9.13",
     "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/icons-material": "^6.1.8",
-    "@patternfly/react-core": "6.0.0-prerelease.21",
-    "@patternfly/virtual-assistant": "2.0.0-alpha.61",
+    "@patternfly/chatbot": "2.2.0-prerelease.6",
+    "@patternfly/react-core": "6.1.0-prerelease.14",
     "@red-hat-developer-hub/backstage-plugin-lightspeed-common": "workspace:^",
     "@tanstack/react-query": "^5.59.15",
     "openai": "^4.52.6",
