chore(deps): align dependancies with backstage 1.32.0 in Marketplace plugin (#256)
* align marketplace dependancies

* fix typo in documentation

--- a/workspaces/marketplace/plugins/marketplace-common/package.json
+++ b/workspaces/marketplace/plugins/marketplace-common/package.json
@@ -40,8 +40,8 @@
   "files": [
     "dist"
   ],
-  "dependencies": {
+  "peerDependencies": {
     "@backstage/catalog-model": "^1.7.0",
-    "@backstage/types": "^1.2.0"
+    "@backstage/types": "^1.1.1"
   }
 }
