fix(global-header): added unit tests for searchBar (#259)
Signed-off-by: Yi Cai <yicai@redhat.com>

--- a/workspaces/global-header/plugins/global-header/package.json
+++ b/workspaces/global-header/plugins/global-header/package.json
@@ -27,6 +27,7 @@
     "start": "backstage-cli package start",
     "build": "backstage-cli package build",
     "lint": "backstage-cli package lint",
+    "lint:fix": "backstage-cli package lint --fix",
     "test": "backstage-cli package test",
     "clean": "backstage-cli package clean",
     "prepack": "backstage-cli package prepack",
@@ -40,6 +41,7 @@
     "@backstage/plugin-search-backend-module-catalog": "^0.2.6",
     "@backstage/plugin-search-backend-module-pg": "^0.5.39",
     "@backstage/plugin-search-backend-module-techdocs": "^0.3.4",
+    "@backstage/plugin-search-common": "^1.2.16",
     "@backstage/plugin-search-react": "1.8.4",
     "@backstage/theme": "^0.6.2",
     "@mui/icons-material": "5.16.13",
@@ -57,6 +59,7 @@
     "@backstage/cli": "^0.29.0",
     "@backstage/core-app-api": "^1.15.2",
     "@backstage/dev-utils": "^1.1.4",
+    "@backstage/plugin-search-common": "^1.2.16",
     "@backstage/test-utils": "^1.7.2",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
