--- a/workspaces/global-header/plugins/global-header/package.json
+++ b/workspaces/global-header/plugins/global-header/package.json
@@ -52,6 +52,11 @@
     "react-use": "^17.2.4"
   },
   "peerDependencies": {
+    "@backstage/core-components": "0.15.1",
+    "@backstage/core-plugin-api": "^1.10.0",
+    "@backstage/plugin-search": "1.4.18",
+    "@backstage/plugin-search-react": "1.8.1",
+    "@backstage/theme": "0.6.0",
     "react": "^16.13.1 || ^17.0.0 || ^18.0.0",
     "react-router-dom": "^6.0.0"
   },
