chore: unify prettier to 3.4.2 (#212)
* chore: unify prettier to 3.4.2

* chore: run root-level prettier:fix

* chore: rebuild api reports in all workspaces

* add .eslintignore

* chore: call eslint fix in all workspaces

* handle no-disabled-tests rule

* chore: call yarn dedupe

--- a/workspaces/marketplace/plugins/marketplace-backend/package.json
+++ b/workspaces/marketplace/plugins/marketplace-backend/package.json
@@ -47,6 +47,7 @@
   "devDependencies": {
     "@backstage/backend-test-utils": "^1.0.2",
     "@backstage/cli": "^0.28.0",
+    "@backstage/plugin-catalog-node": "^1.15.0",
     "@types/express": "*",
     "@types/supertest": "^2.0.12",
     "supertest": "^6.2.4"
