--- a/.github/workflows/release_workspace.yml
+++ b/.github/workflows/release_workspace.yml
@@ -4,32 +4,32 @@ on:
   workflow_dispatch:
     inputs:
       workspace:
-        description: "Name of the Workspace"
+        description: 'Name of the Workspace'
         required: true
         type: string
       force_release:
-        description: "Force release even if no changesets are present"
+        description: 'Force release even if no changesets are present'
         required: false
         type: boolean
       branch:
-        description: "Branch to run the workflow on"
+        description: 'Branch to run the workflow on'
         required: false
-        default: "main"
+        default: 'main'
         type: string
   workflow_call:
     inputs:
       force_release:
-        description: "Force release even if no changesets are present"
+        description: 'Force release even if no changesets are present'
         required: false
         type: boolean
       workspace:
-        description: "Name of the Workspace"
+        description: 'Name of the Workspace'
         required: true
         type: string
       branch:
-        description: "Branch to run the workflow on"
+        description: 'Branch to run the workflow on'
         required: false
-        default: "main"
+        default: 'main'
         type: string
 
 concurrency:
@@ -102,8 +102,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.RHDH_BOT_TOKEN }}
 
-
-
   release:
     name: Release workspace ${{ inputs.workspace }} on branch ${{ inputs.branch }}
     runs-on: ubuntu-latest
@@ -157,7 +155,7 @@ jobs:
           yarn workspaces foreach -v --no-private npm publish --access public --tolerate-republish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.RHDH_NPM_TOKEN }}
-      
+
       - name: Create tag
         working-directory: ${{ github.workspace }}/scripts/ci
         run: node create-tag.js
