--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@backstage/cli": "^0.27.0",
     "@backstage/cli-node": "^0.2.2",
     "@changesets/parse": "^0.4.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
     "@manypkg/get-packages": "^2.2.2",
     "@octokit/rest": "^20.1.1",
     "@red-hat-developer-hub/cli": "portal:./workspaces/repo-tools/packages/cli",
@@ -33,7 +34,7 @@
     "lint-staged": "^15.2.2",
     "lodash.escaperegexp": "^4.1.2",
     "node-fetch": "^2.6.7",
-    "prettier": "^2.3.2"
+    "prettier": "^3.4.2"
   },
   "prettier": "@spotify/prettier-config",
   "lint-staged": {
