--- a/workspaces/global-header/plugins/global-header/package.json
+++ b/workspaces/global-header/plugins/global-header/package.json
@@ -33,29 +33,24 @@
     "postpack": "backstage-cli package postpack"
   },
   "dependencies": {
-    "@backstage/core-components": "^0.16.1",
-    "@backstage/core-plugin-api": "^1.10.1",
-    "@backstage/plugin-search": "1.4.21",
-    "@backstage/plugin-search-backend": "^1.8.0",
-    "@backstage/plugin-search-backend-module-catalog": "^0.2.6",
-    "@backstage/plugin-search-backend-module-pg": "^0.5.39",
-    "@backstage/plugin-search-backend-module-techdocs": "^0.3.4",
-    "@backstage/plugin-search-common": "^1.2.16",
-    "@backstage/plugin-search-react": "1.8.4",
-    "@backstage/theme": "^0.6.2",
+    "@backstage/core-components": "^0.15.1",
+    "@backstage/core-plugin-api": "^1.10.0",
+    "@backstage/plugin-search": "1.4.18",
+    "@backstage/plugin-search-backend": "1.6.1",
+    "@backstage/plugin-search-backend-module-catalog": "^0.2.4",
+    "@backstage/plugin-search-backend-module-pg": "0.5.37",
+    "@backstage/plugin-search-backend-module-techdocs": "^0.3.1",
+    "@backstage/plugin-search-common": "^1.2.15",
+    "@backstage/plugin-search-react": "^1.8.1",
+    "@backstage/theme": "^0.6.0",
     "@mui/icons-material": "5.16.13",
     "@mui/material": "5.16.13",
     "@mui/styled-engine": "5.16.13",
-    "react-dom": "16.13.1 || ^17.0.0 || ^18.0.0",
-    "react-router-dom": "^6.3.0",
-    "react-use": "^17.2.4"
+    "react-dom": "18.3.1",
+    "react-router-dom": "^6.26.2",
+    "react-use": "^17.5.0"
   },
   "peerDependencies": {
-    "@backstage/core-components": "0.15.1",
-    "@backstage/core-plugin-api": "^1.10.0",
-    "@backstage/plugin-search": "1.4.18",
-    "@backstage/plugin-search-react": "1.8.1",
-    "@backstage/theme": "0.6.0",
     "react": "^16.13.1 || ^17.0.0 || ^18.0.0",
     "react-router-dom": "^6.0.0"
   },
