feat(marketplace): add more API endpoints in marketplace (#268)
* add more APIs in marketplace

* move marketplace client to common package

* generate api and knip reports

* chore(marketplace): move tests, added some todos

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

---------

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>
Co-authored-by: Christoph Jerolimov <jerolimov+git@redhat.com>

--- a/workspaces/marketplace/plugins/marketplace-backend/package.json
+++ b/workspaces/marketplace/plugins/marketplace-backend/package.json
@@ -37,12 +37,10 @@
     "@backstage/backend-plugin-api": "^1.0.1",
     "@backstage/catalog-client": "^1.8.0",
     "@backstage/errors": "^1.2.4",
+    "@backstage/plugin-catalog-node": "^1.13.1",
     "@red-hat-developer-hub/backstage-plugin-marketplace-common": "workspace:^",
     "express": "^4.17.1",
-    "express-promise-router": "^4.1.0",
-    "glob": "^10.4.5",
-    "yaml": "^2.6.0",
-    "zod": "^3.22.4"
+    "express-promise-router": "^4.1.0"
   },
   "devDependencies": {
     "@backstage/backend-test-utils": "^1.0.2",
@@ -50,6 +48,7 @@
     "@backstage/plugin-catalog-node": "^1.15.0",
     "@types/express": "*",
     "@types/supertest": "^2.0.12",
+    "msw": "^1.0.0",
     "supertest": "^6.2.4"
   },
   "files": [
