--- a/workspaces/marketplace/plugins/marketplace-common/package.json
+++ b/workspaces/marketplace/plugins/marketplace-common/package.json
@@ -17,7 +17,7 @@
     "directory": "workspaces/marketplace/plugins/marketplace-common"
   },
   "backstage": {
-    "role": "common-library",
+    "role": "node-library",
     "pluginId": "marketplace",
     "pluginPackages": [
       "@red-hat-developer-hub/backstage-plugin-marketplace",
@@ -35,13 +35,21 @@
     "postpack": "backstage-cli package postpack"
   },
   "devDependencies": {
+    "@backstage/backend-test-utils": "^1.0.2",
     "@backstage/cli": "^0.28.0"
   },
   "files": [
     "dist"
   ],
   "peerDependencies": {
+    "@backstage/backend-plugin-api": "^1.0.1",
+    "@backstage/catalog-client": "^1.8.0",
     "@backstage/catalog-model": "^1.7.0",
+    "@backstage/errors": "^1.2.4",
     "@backstage/types": "^1.1.1"
+  },
+  "dependencies": {
+    "@backstage/backend-plugin-api": "^1.0.1",
+    "@backstage/errors": "^1.2.4"
   }
 }
