--- a/workspaces/marketplace/plugins/marketplace/package.json
+++ b/workspaces/marketplace/plugins/marketplace/package.json
@@ -36,13 +36,11 @@
   "dependencies": {
     "@backstage/core-components": "^0.15.1",
     "@backstage/core-plugin-api": "^1.10.0",
-    "@backstage/plugin-catalog-react": "^1.14.0",
     "@backstage/theme": "^0.6.0",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.12.2",
     "@red-hat-developer-hub/backstage-plugin-marketplace-common": "workspace:^",
-    "@tanstack/react-query": "^5.60.5",
-    "react-use": "^17.2.4"
+    "@tanstack/react-query": "^5.60.5"
   },
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0",
@@ -51,14 +49,9 @@
   },
   "devDependencies": {
     "@backstage/cli": "^0.28.0",
-    "@backstage/core-app-api": "^1.15.1",
     "@backstage/dev-utils": "^1.1.2",
-    "@backstage/test-utils": "^1.7.0",
     "@red-hat-developer-hub/backstage-plugin-theme": "^0.4.7",
     "@testing-library/jest-dom": "^6.0.0",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.0.0",
-    "msw": "^1.0.0",
     "react": "^17.0.0 || ^18.0.0",
     "react-router-dom": "^6.3.0"
   },
