chore: update and aligned catalog-info.yamls from plugins (#291)
* chore: update and aligned all catalog-infos

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

* chore(homepage): move docs from the frontend plugin to the workspace

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

* chore: split plugins and plugin-packages

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

---------

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

--- a/workspaces/lightspeed/catalog-info.yaml
+++ b/workspaces/lightspeed/catalog-info.yaml
@@ -1,13 +1,11 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: lightspeed
-  description: An example of a Backstage application.
-  # Example for optional annotations
-  # annotations:
-  #   github.com/project-slug: backstage/backstage
-  #   backstage.io/techdocs-ref: dir:.
+  name: red-hat-developer-hub-lightspeed
+  title: RHDH Lightspeed plugin
 spec:
-  type: website
-  owner: john@example.com
-  lifecycle: experimental
+  type: backstage-plugin
+  lifecycle: production
+  owner: rhdh-team
+  system: rhdh
+  subcomponentOf: rhdh-plugins
