--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,16 +1,15 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: red-hat-developer-hub-global-floating-action-button
-  title: RHDH Global Floating Action Button plugin
-  description: The global floating action button plugin allows other plugins to add a floating action button to the RHDH app.
+  name: rhdh-plugins
+  title: RHDH plugins
+  description: Backstage Plugins by Red Hat
   annotations:
     github.com/project-slug: redhat-developer/rhdh-plugins
     github.com/team-slug: redhat-developer/rhdh-plugins-contributers
     #sonarqube.org/project-key: redhat-developer_rhdh-plugins
 spec:
-  type: backstage-plugin
+  type: plugins
   lifecycle: production
   owner: rhdh-team
   system: rhdh
-  subcomponentOf: rhdh-plugins
