--- a/workspaces/bulk-import/catalog-info.yaml
+++ b/workspaces/bulk-import/catalog-info.yaml
@@ -1,13 +1,24 @@
+# https://backstage.io/docs/features/software-catalog/descriptor-format#kind-component
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: bulk-import
-  description: An example of a Backstage application.
-  # Example for optional annotations
-  # annotations:
-  #   github.com/project-slug: backstage/backstage
-  #   backstage.io/techdocs-ref: dir:.
+  name: red-hat-developer-hub-bulk-import
+  title: RHDH Bulk Import plugin
+  annotations:
+    backstage.io/source-location: url:https://github.com/redhat-developer/rhdh-plugins/tree/main/workspaces/bulk-import/plugins/bulk-import
+    backstage.io/view-url: https://github.com/redhat-developer/rhdh-plugins/blob/main/workspaces/bulk-import/plugins/bulk-import/catalog-info.yaml
+    backstage.io/edit-url: https://github.com/redhat-developer/rhdh-plugins/edit/main/workspaces/bulk-import/plugins/bulk-import/catalog-info.yaml
+    github.com/project-slug: red-hat-developer-hub/backstage-plugins
+    github.com/team-slug: rhdh/maintainers-plugins
+    sonarqube.org/project-key: red_hat_developer_hub_plugins
+  links:
+    - url: https://github.com/redhat-developer/rhdh-plugins/tree/main/workspaces/bulk-import/plugins/bulk-import
+      title: GitHub Source
+      icon: source
+      type: source
 spec:
-  type: website
-  owner: john@example.com
-  lifecycle: experimental
+  type: backstage-plugin
+  lifecycle: production
+  owner: rhdh-team
+  system: rhdh
+  subcomponentOf: rhdh-plugins
