--- a/workspaces/bulk-import/plugins/bulk-import-backend/catalog-info.yaml
+++ b/workspaces/bulk-import/plugins/bulk-import-backend/catalog-info.yaml
@@ -32,7 +32,7 @@ apiVersion: backstage.io/v1alpha1
 kind: API
 metadata:
   name: red-hat-developer-hub-bulk-import-backend-api
-  title: '@red-hat-developer-hub/backstage-plugin-bulk-import-backend'
+  title: '@red-hat-developer-hub/backstage-plugin-bulk-import-backend API'
   description: Bulk Import Backend Plugin
   annotations:
     backstage.io/source-location: url:https://github.com/redhat-developer/rhdh-plugins/tree/main/workspaces/bulk-import/plugins/bulk-import-backend
