--- a/workspaces/global-header/catalog-info.yaml
+++ b/workspaces/global-header/catalog-info.yaml
@@ -1,13 +1,20 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: global-header
-  description: An example of a Backstage application.
-  # Example for optional annotations
-  # annotations:
-  #   github.com/project-slug: backstage/backstage
-  #   backstage.io/techdocs-ref: dir:.
+  name: red-hat-developer-hub-global-header
+  title: RHDH Global Header plugin
+  description: The global header plugins provides an extendable way for the RHDH header. It provides a set of default components and also allow other plugins can contribute components to the header.
+  annotations:
+    github.com/project-slug: redhat-developer/rhdh-plugins
+    github.com/team-slug: redhat-developer/rhdh-plugins-contributers
+    #sonarqube.org/project-key: redhat-developer_rhdh-plugins
+  tags:
+    - backstage
+    - rhdh
+    - plugin
 spec:
-  type: website
-  owner: john@example.com
-  lifecycle: experimental
+  type: backstage-plugin
+  lifecycle: production
+  owner: rhdh-team
+  system: rhdh
+  subcomponentOf: rhdh-plugins
