--- a/workspaces/homepage/catalog-info.yaml
+++ b/workspaces/homepage/catalog-info.yaml
@@ -2,15 +2,17 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: rhdh-plugins-homepage
-  title: Home Page plugin
+  name: red-hat-developer-hub-homepage
+  title: RHDH Home Page plugin
   description: Home Page plugin based on the upstream `home` plugin that can be extended and customized with the RHDH dynamic plugin feature.
   annotations:
-    {}
-    # github.com/project-slug: janus-idp/backstage-showcase
-    # github.com/team-slug: janus-idp/maintainers-plugins
-    # sonarqube.org/project-key: janus-idp_backstage-showcase
+    backstage.io/techdocs-ref: dir:.
+    github.com/project-slug: redhat-developer/rhdh-plugins
+    github.com/team-slug: redhat-developer/rhdh-plugins-contributers
+    #sonarqube.org/project-key: redhat-developer_rhdh-plugins
   tags:
+    - rhdh
+    - plugin
     - homepage
   links:
     - url: https://github.com/redhat-developer/rhdh-plugins/tree/main/workspaces/homepage
@@ -22,3 +24,4 @@ spec:
   lifecycle: production
   owner: rhdh-team
   system: rhdh
+  subcomponentOf: rhdh-plugins
