--- a/workspaces/homepage/plugins/dynamic-home-page/catalog-info.yaml
+++ b/workspaces/homepage/plugins/dynamic-home-page/catalog-info.yaml
@@ -6,10 +6,10 @@ metadata:
   title: '@red-hat-developer-hub/backstage-plugin-dynamic-home-page'
   description: Dynamic Home Page plugin based on the upstream `home` plugin that can be extended and customized with the RHDH dynamic plugin feature.
   annotations:
-    {}
-    # github.com/project-slug: janus-idp/backstage-showcase
-    # github.com/team-slug: janus-idp/maintainers-plugins
-    # sonarqube.org/project-key: janus-idp_backstage-showcase
+    backstage.io/techdocs-entity: component:default/red-hat-developer-hub-homepage
+    github.com/project-slug: redhat-developer/rhdh-plugins
+    github.com/team-slug: redhat-developer/rhdh-plugins-contributers
+    #sonarqube.org/project-key: redhat-developer_rhdh-plugins
   tags:
     - homepage
   links:
@@ -22,7 +22,7 @@ spec:
   lifecycle: production
   owner: rhdh-team
   system: rhdh
-  subcomponentOf: rhdh-plugins-homepage
+  subcomponentOf: red-hat-developer-hub-homepage
   dependsOn:
     - component:backstage-plugin-home
     - component:backstage-plugin-home-react
