--- a/workspaces/openshift-image-registry/catalog-info.yaml
+++ b/workspaces/openshift-image-registry/catalog-info.yaml
@@ -1,13 +1,27 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: openshift-image-registry
-  description: An example of a Backstage application.
-  # Example for optional annotations
-  # annotations:
-  #   github.com/project-slug: backstage/backstage
-  #   backstage.io/techdocs-ref: dir:.
+  name: red-hat-developer-hub-openshift-image-registry
+  title: RHDH OpenShift Image Registry plugin
+  description: OpenShift Image Registry plugin for Backstage
+  annotations:
+    backstage.io/source-location: url:https://github.com/redhat-developer/rhdh-plugins/tree/main/workspaces/openshift-image-registry/plugins/openshift-image-registry
+    backstage.io/view-url: https://github.com/redhat-developer/rhdh-plugins/tree/main/workspaces/openshift-image-registry/plugins/openshift-image-registry/catalog-info.yaml
+    backstage.io/edit-url: https://github.com/redhat-developer/rhdh-plugins/tree/main/workspaces/openshift-image-registry/plugins/openshift-image-registry/catalog-info.yaml
+    github.com/project-slug: red-hat-developer-hub/backstage-plugins
+    github.com/team-slug: red-hat-developer-hub/maintainers-plugins
+    sonarqube.org/project-key: red-hat-developer-hub_backstage-plugins
+  tags:
+    - kubernetes
+    - openshift
+  links:
+    - url: https://github.com/redhat-developer/rhdh-plugins/tree/main/workspaces/openshift-image-registry/plugins/openshift-image-registry
+      title: GitHub Source
+      icon: source
+      type: source
 spec:
-  type: website
-  owner: john@example.com
-  lifecycle: experimental
+  type: backstage-plugin
+  lifecycle: production
+  owner: rhdh-team
+  system: rhdh
+  subcomponentOf: rhdh-plugins
