--- a/workspaces/theme/catalog-info.yaml
+++ b/workspaces/theme/catalog-info.yaml
@@ -1,13 +1,26 @@
+# https://backstage.io/docs/features/software-catalog/descriptor-format#kind-component
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: theme
-  description: An example of a Backstage application.
-  # Example for optional annotations
-  # annotations:
-  #   github.com/project-slug: backstage/backstage
-  #   backstage.io/techdocs-ref: dir:.
+  name: red-hat-developer-hub-theme
+  title: RHDH Theme
+  description: Theme for RHDH 1.5 and later.
+  annotations:
+    github.com/project-slug: redhat-developer/rhdh-plugins
+    github.com/team-slug: redhat-developer/rhdh-plugins-contributers
+    #sonarqube.org/project-key: redhat-developer_rhdh-plugins
+  tags:
+    - rhdh
+    - plugin
+    - homepage
+  links:
+    - url: https://github.com/redhat-developer/rhdh-plugins/tree/main/workspaces/homepage
+      title: GitHub Source
+      icon: source
+      type: source
 spec:
-  type: website
-  owner: john@example.com
-  lifecycle: experimental
+  type: backstage-plugin
+  lifecycle: production
+  owner: rhdh-team
+  system: rhdh
+  subcomponentOf: rhdh-plugins
