--- a/catalog-info-plugins-packages.yaml
+++ b/catalog-info-plugins-packages.yaml
@@ -1,8 +1,8 @@
 apiVersion: backstage.io/v1alpha1
 kind: Location
 metadata:
-  name: rhdh-plugins
-  title: RHDH plugins
+  name: rhdh-plugins-plugins-packages
+  title: RHDH plugins (list of frontend plugns, backend plugins, etc.)
   description: Backstage Plugins by Red Hat
 spec:
   targets:
