--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -9,7 +9,7 @@ metadata:
     github.com/team-slug: redhat-developer/rhdh-plugins-contributers
     #sonarqube.org/project-key: redhat-developer_rhdh-plugins
 spec:
-  type: plugins
+  type: backstage-plugin-repository
   lifecycle: production
   owner: rhdh-team
   system: rhdh
