--- a/workspaces/global-floating-action-button/catalog-info.yaml
+++ b/workspaces/global-floating-action-button/catalog-info.yaml
@@ -8,9 +8,14 @@ metadata:
     github.com/project-slug: redhat-developer/rhdh-plugins
     github.com/team-slug: redhat-developer/rhdh-plugins-contributers
     #sonarqube.org/project-key: redhat-developer_rhdh-plugins
+  tags:
+    - backstage
+    - rhdh
+    - plugin
+    - ui
 spec:
   type: backstage-plugin
-  lifecycle: production
-  owner: rhdh-team
+  lifecycle: development
+  owner: rhdh-ui-team
   system: rhdh
   subcomponentOf: rhdh-plugins
