--- a/workspaces/marketplace/catalog-info.yaml
+++ b/workspaces/marketplace/catalog-info.yaml
@@ -14,7 +14,7 @@ metadata:
     - plugin
 spec:
   type: backstage-plugin
-  lifecycle: production
-  owner: rhdh-team
+  lifecycle: development
+  owner: rhdh-ui-team
   system: rhdh
   subcomponentOf: rhdh-plugins
