chore(orchestrator): add orchestror among pluginsWithPermission (#316)
Signed-off-by: Marek Libra <marek.libra@gmail.com>

--- a/workspaces/orchestrator/app-config.yaml
+++ b/workspaces/orchestrator/app-config.yaml
@@ -81,8 +81,10 @@ auth:
 # permission:
 #   enabled: true
 #   rbac:
-#     policies-csv-file: ../../plugins/orchestrator/docs/rbac-policy.csv
+#     policies-csv-file: ../../docs/rbac-policy.csv
 #     policyFileReload: true
+#     pluginsWithPermission:
+#       - orchestrator
 #     admin:
 #       users:
 #         - name: user:default/mareklibra
