feat(homepage): add support to incl. the user displayName in the header title and to add a local and world clock to the header (#313)
Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

--- a/workspaces/homepage/app-config.yaml
+++ b/workspaces/homepage/app-config.yaml
@@ -80,15 +80,9 @@ catalog:
   locations:
     # Local example data, file locations are relative to the backend process, typically `packages/backend`
     - type: file
-      target: ../../examples/entities.yaml
-
-    # Local example template
+      target: ../../catalog-info.yaml
     - type: file
-      target: ../../examples/template/template.yaml
-      rules:
-        - allow: [Template]
-
-    # Local example organizational data
+      target: ../../examples/entities.yaml
     - type: file
       target: ../../examples/org.yaml
       rules:
