--- a/workspaces/homepage/package.json
+++ b/workspaces/homepage/package.json
@@ -24,6 +24,7 @@
     "lint:all": "backstage-cli repo lint",
     "test:e2e": "playwright test",
     "prettier:check": "prettier --check .",
+    "prettier:fix": "prettier --write .",
     "new": "backstage-cli new --scope @red-hat-developer-hub",
     "postinstall": "cd ../../ && yarn install"
   },
