feat(homepage): Upgrade Backstage from 1.32.0 to 1.35.0 (#314)
Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

--- a/workspaces/homepage/plugins/dynamic-home-page/package.json
+++ b/workspaces/homepage/plugins/dynamic-home-page/package.json
@@ -32,13 +32,13 @@
     "postpack": "backstage-cli package postpack"
   },
   "dependencies": {
-    "@backstage/core-components": "0.15.1",
-    "@backstage/core-plugin-api": "1.10.0",
-    "@backstage/plugin-catalog-react": "1.14.0",
-    "@backstage/plugin-home": "0.8.0",
-    "@backstage/plugin-home-react": "0.1.18",
-    "@backstage/plugin-search-react": "1.8.1",
-    "@backstage/theme": "0.6.0",
+    "@backstage/core-components": "^0.16.3",
+    "@backstage/core-plugin-api": "^1.10.3",
+    "@backstage/plugin-catalog-react": "^1.15.1",
+    "@backstage/plugin-home": "^0.8.4",
+    "@backstage/plugin-home-react": "^0.1.22",
+    "@backstage/plugin-search-react": "^1.8.5",
+    "@backstage/theme": "^0.6.3",
     "@mui/material": "5.16.13",
     "@mui/styles": "5.16.13",
     "@scalprum/react-core": "0.9.3",
@@ -51,11 +51,11 @@
     "react-router-dom": "6.28.1"
   },
   "devDependencies": {
-    "@backstage/cli": "0.28.2",
-    "@backstage/core-app-api": "1.15.1",
-    "@backstage/dev-utils": "1.1.2",
-    "@backstage/plugin-catalog": "^1.24.0",
-    "@backstage/test-utils": "1.7.0",
+    "@backstage/cli": "^0.29.5",
+    "@backstage/core-app-api": "^1.15.4",
+    "@backstage/dev-utils": "^1.1.6",
+    "@backstage/plugin-catalog": "^1.26.1",
+    "@backstage/test-utils": "^1.7.4",
     "@openshift/dynamic-plugin-sdk": "5.0.1",
     "@redhat-developer/red-hat-developer-hub-theme": "0.4.0",
     "@testing-library/jest-dom": "6.6.3",
