chore(orchestrator): add sonataflow env variables (#302)
Signed-off-by: Marek Libra <marek.libra@gmail.com>

--- a/workspaces/orchestrator/app-config.yaml
+++ b/workspaces/orchestrator/app-config.yaml
@@ -118,6 +118,9 @@ orchestrator:
     baseUrl: http://localhost
     port: 8899
     autoStart: true
+    # notsecret
+    notificationsBearerToken: bXljdXJscGFzc3dkCg==
+    notificationsUrl: http://host.docker.internal:7007
     workflowsSource:
       gitRepositoryUrl: https://github.com/parodos-dev/backstage-orchestrator-workflows
       localPath: /tmp/orchestrator/repository
