fix(lightspeed-backend): fix dynamic plugin export errors (#346)
* fix(lightspeed-common): fix publishConfig issues causing errors while packaging dynamic-plugins

* fix dynamic plugins configuration examples

---------

Co-authored-by: Stephanie Cao <yangcao@redhat.com>

--- a/workspaces/lightspeed/plugins/lightspeed-backend/package.json
+++ b/workspaces/lightspeed/plugins/lightspeed-backend/package.json
@@ -69,7 +69,7 @@
   "files": [
     "dist",
     "config.d.ts",
-    "app-config.dynamic.yaml"
+    "app-config.yaml"
   ],
   "configSchema": "config.d.ts",
   "repository": {
