--- a/workspaces/global-header/plugins/global-header/app-config.dynamic.yaml
+++ b/workspaces/global-header/plugins/global-header/app-config.dynamic.yaml
@@ -7,4 +7,65 @@ dynamicPlugins:
           importName: GlobalHeader
           config:
             layout:
-              position: above-main-content
+              position: above-main-content # above-main-content | below-main-content
+        - mountPoint: global.header/component
+          importName: SearchComponent
+          config:
+            type: search
+            slot: header-start
+            priority: 100
+        - mountPoint: global.header/component
+          importName: CreateDropdown
+          config:
+            type: dropdown_button
+            key: create
+            slot: header-start
+            priority: 90
+        - mountPoint: global.header/create
+          importName: SoftwareTemplatesSection
+          config:
+            type: list
+            priority: 10
+        - mountPoint: global.header/create
+          importName: RegisterAComponentSection
+          config:
+            type: link
+        - mountPoint: global.header/component
+          importName: HeaderIconButton
+          config:
+            type: icon_button
+            slot: header-start
+            priority: 80
+            props:
+              icon: support
+              tooltip: 'Support'
+        - mountPoint: global.header/component
+          importName: HeaderIconButton
+          config:
+            type: icon_button
+            slot: header-start
+            priority: 70
+            props:
+              icon: notifications
+              tooltip: 'Notifications'
+        - mountPoint: global.header/component
+          importName: ProfileDropdown
+          config:
+            type: dropdown_button
+            key: profile
+            slot: header-end
+            priority: 0
+        - mountPoint: global.header/profile
+          importName: HeaderLink
+          config:
+            type: link
+            priority: 10
+            props:
+              title: Settings
+              link: /settings
+              icon: manageAccounts
+        - mountPoint: global.header/profile
+          importName: LogoutButton
+          config:
+            type: logout
+            priority: 0
