--- a/workspaces/global-header/plugins/global-header/package.json
+++ b/workspaces/global-header/plugins/global-header/package.json
@@ -33,8 +33,10 @@
     "postpack": "backstage-cli package postpack"
   },
   "dependencies": {
+    "@backstage/catalog-model": "^1.7.0",
     "@backstage/core-components": "^0.15.1",
     "@backstage/core-plugin-api": "^1.10.0",
+    "@backstage/plugin-catalog-react": "^1.14.0",
     "@backstage/plugin-search": "1.4.18",
     "@backstage/plugin-search-backend": "1.6.1",
     "@backstage/plugin-search-backend-module-catalog": "^0.2.4",
@@ -46,6 +48,7 @@
     "@mui/icons-material": "5.16.13",
     "@mui/material": "5.16.13",
     "@mui/styled-engine": "5.16.13",
+    "@scalprum/react-core": "0.9.3",
     "react-dom": "18.3.1",
     "react-router-dom": "^6.26.2",
     "react-use": "^17.5.0"
@@ -60,6 +63,7 @@
     "@backstage/dev-utils": "^1.1.4",
     "@backstage/plugin-search-common": "^1.2.16",
     "@backstage/test-utils": "^1.7.2",
+    "@openshift/dynamic-plugin-sdk": "^5.0.1",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.0.0",
@@ -67,6 +71,12 @@
     "react": "^16.13.1 || ^17.0.0 || ^18.0.0",
     "react-router-dom": "^6.0.0"
   },
+  "keywords": [
+    "support:tech-preview",
+    "lifecycle:active",
+    "backstage",
+    "plugin"
+  ],
   "files": [
     "app-config.dynamic.yaml",
     "dist"
