--- a/workspaces/global-header/plugins/global-header/package.json
+++ b/workspaces/global-header/plugins/global-header/package.json
@@ -33,18 +33,18 @@
     "postpack": "backstage-cli package postpack"
   },
   "dependencies": {
-    "@backstage/catalog-model": "^1.7.0",
-    "@backstage/core-components": "^0.15.1",
-    "@backstage/core-plugin-api": "^1.10.0",
-    "@backstage/plugin-catalog-react": "^1.14.0",
-    "@backstage/plugin-search": "1.4.18",
-    "@backstage/plugin-search-backend": "1.6.1",
-    "@backstage/plugin-search-backend-module-catalog": "^0.2.4",
-    "@backstage/plugin-search-backend-module-pg": "0.5.37",
-    "@backstage/plugin-search-backend-module-techdocs": "^0.3.1",
-    "@backstage/plugin-search-common": "^1.2.15",
-    "@backstage/plugin-search-react": "^1.8.1",
-    "@backstage/theme": "^0.6.0",
+    "@backstage/catalog-model": "^1.7.3",
+    "@backstage/core-components": "^0.16.3",
+    "@backstage/core-plugin-api": "^1.10.3",
+    "@backstage/plugin-catalog-react": "^1.15.1",
+    "@backstage/plugin-search": "^1.4.22",
+    "@backstage/plugin-search-backend": "^1.8.1",
+    "@backstage/plugin-search-backend-module-catalog": "^0.3.0",
+    "@backstage/plugin-search-backend-module-pg": "^0.5.40",
+    "@backstage/plugin-search-backend-module-techdocs": "^0.3.5",
+    "@backstage/plugin-search-common": "^1.2.17",
+    "@backstage/plugin-search-react": "^1.8.5",
+    "@backstage/theme": "^0.6.3",
     "@mui/icons-material": "5.16.13",
     "@mui/material": "5.16.13",
     "@mui/styled-engine": "5.16.13",
@@ -58,11 +58,11 @@
     "react-router-dom": "^6.0.0"
   },
   "devDependencies": {
-    "@backstage/cli": "^0.29.0",
-    "@backstage/core-app-api": "^1.15.2",
-    "@backstage/dev-utils": "^1.1.4",
-    "@backstage/plugin-search-common": "^1.2.16",
-    "@backstage/test-utils": "^1.7.2",
+    "@backstage/cli": "^0.29.5",
+    "@backstage/core-app-api": "^1.15.4",
+    "@backstage/dev-utils": "^1.1.6",
+    "@backstage/plugin-search-common": "^1.2.17",
+    "@backstage/test-utils": "^1.7.4",
     "@openshift/dynamic-plugin-sdk": "^5.0.1",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
