docs(application-listener-test): add new CrashListener and update readme (#368)
Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

--- a/workspaces/global-floating-action-button/plugins/application-listener-test/app-config.dynamic.yaml
+++ b/workspaces/global-floating-action-button/plugins/application-listener-test/app-config.dynamic.yaml
@@ -1,7 +1,8 @@
-# test global-header components. this isn't implemented yet!
 dynamicPlugins:
   frontend:
     red-hat-developer-hub.backstage-plugin-application-listener-test:
       mountPoints:
+        - mountPoint: application/listener
+          importName: CrashListener
         - mountPoint: application/listener
           importName: LocationListener
