feat(orchestrator): workflow as template (#383)
* Adding scaffolder-backend-module-orchestrator

Signed-off-by: Marek Libra <marek.libra@gmail.com>

* Add first workflow templae

Signed-off-by: Marek Libra <marek.libra@gmail.com>

* add dry-run

Signed-off-by: Marek Libra <marek.libra@gmail.com>

* use convertWorkflowToTemplate by default

Signed-off-by: Marek Libra <marek.libra@gmail.com>

* add plugin-scaffolder-backend-module-github

Signed-off-by: Marek Libra <marek.libra@gmail.com>

* add prettier and lint

* add getWorkflowParams action

Signed-off-by: Marek Libra <marek.libra@gmail.com>

* add convertWorkflowToTemplate

* app-config add github integrations and templates example

* wip - README

* render the $ sign properly in the template

Signed-off-by: Marek Libra <marek.libra@gmail.com>

* fix typos

Signed-off-by: Marek Libra <marek.libra@gmail.com>

* documentation for templates

Signed-off-by: Marek Libra <marek.libra@gmail.com>

* update documentation

* dedup code

* call prettier

* mention convertWorkflowToTemplate in the README

* dedup code

* simplify TS

* dedup yarn.lock

* add scaffolder-backend-module-orchestrator/report.api.md

* autofix package.json

* add example regexp validation to the yamlgreet template

* rewording

---------

Signed-off-by: Marek Libra <marek.libra@gmail.com>

--- a/workspaces/orchestrator/app-config.yaml
+++ b/workspaces/orchestrator/app-config.yaml
@@ -43,6 +43,9 @@ backend:
   # workingDirectory: /tmp # Use this to configure a working directory for the scaffolder, defaults to the OS temp-dir
 
 integrations: {}
+# integrations:
+#   github:
+#     - token: ${GITHUB_TOKEN}
 
 proxy:
   '/quay/api':
@@ -107,9 +110,15 @@ catalog:
       target: https://github.com/redhat-developer/red-hat-developer-hub-software-templates/blob/main/templates.yaml
 
     - type: file
-      target: ../../users.yaml
+      target: ../../entities/users.yaml
       rules:
         - allow: [User]
+
+    - type: file
+      target: ../../entities/templates.yaml
+
+    # - type: url
+    #   target: https://github.com/mareklibra/generated-workflow-templates/blob/main/templates.yaml
 
 dynamicPlugins:
   frontend: {}
