--- a/workspaces/orchestrator/packages/backend/package.json
+++ b/workspaces/orchestrator/packages/backend/package.json
@@ -39,6 +39,7 @@
     "@backstage/plugin-permission-node": "^0.8.4",
     "@backstage/plugin-proxy-backend": "^0.5.7",
     "@backstage/plugin-scaffolder-backend": "^1.26.2",
+    "@backstage/plugin-scaffolder-backend-module-github": "^0.5.5",
     "@backstage/plugin-search-backend": "^1.6.1",
     "@backstage/plugin-search-backend-module-catalog": "^0.2.4",
     "@backstage/plugin-search-backend-module-pg": "^0.5.37",
@@ -48,6 +49,7 @@
     "@backstage/plugin-techdocs-backend": "^1.11.1",
     "@red-hat-developer-hub/backstage-plugin-orchestrator-backend": "workspace:^",
     "app": "link:../app",
+    "backstage-plugin-scaffolder-backend-module-orchestrator": "^0.1.0",
     "better-sqlite3": "^9.0.0",
     "node-gyp": "^10.0.0",
     "pg": "^8.11.3",
