feat(global-header): implemented support button in header (#373)
* feat(global-header): implemented support button in header

Signed-off-by: Yi Cai <yicai@redhat.com>

* implemented notifications icon button

Signed-off-by: Yi Cai <yicai@redhat.com>

* updated yarn.lock

Signed-off-by: Yi Cai <yicai@redhat.com>

* added changeset

Signed-off-by: Yi Cai <yicai@redhat.com>

* fixed sonarqubecloud issue

Signed-off-by: Yi Cai <yicai@redhat.com>

* addressed review comments

Signed-off-by: Yi Cai <yicai@redhat.com>

* removed hardcoded colors

Signed-off-by: Yi Cai <yicai@redhat.com>

* Enabled dev app to test global header

Signed-off-by: Yi Cai <yicai@redhat.com>

* fixed failed ci checks

Signed-off-by: Yi Cai <yicai@redhat.com>

* fixed a small style issue

Signed-off-by: Yi Cai <yicai@redhat.com>

* added changeset

Signed-off-by: Yi Cai <yicai@redhat.com>

* resolved sonarQube issues

Signed-off-by: Yi Cai <yicai@redhat.com>

* fixed failed ci checks

Signed-off-by: Yi Cai <yicai@redhat.com>

* updated report.api.md

Signed-off-by: Yi Cai <yicai@redhat.com>

* bug fix

Signed-off-by: Yi Cai <yicai@redhat.com>

* bug fix

Signed-off-by: Yi Cai <yicai@redhat.com>

* fix failed unit tests

Signed-off-by: Yi Cai <yicai@redhat.com>

* Revert "fix(orchestrator): Standardise the page loading animation (#397)"

This reverts commit be802dbf504e9acaf5bde6764a11e70568df98e7.

* removed old changeset

Signed-off-by: Yi Cai <yicai@redhat.com>

* trigger ci

* addessed review comments and fixed a few bugs

Signed-off-by: Yi Cai <yicai@redhat.com>

* chore(global-header): allow developers to start the demo app without any additional config change

* chore(global-header): remove example components

* chore(global-header): add theme and demo without search to dev page

* chore(global-header): change no software template available ui

* fix(global-header): fix UI crash when software template a

--- a/workspaces/global-header/app-config.yaml
+++ b/workspaces/global-header/app-config.yaml
@@ -32,6 +32,17 @@ backend:
     connection: ':memory:'
   # workingDirectory: /tmp # Use this to configure a working directory for the scaffolder, defaults to the OS temp-dir
 
+  # enable notifications backend
+  auth:
+    dangerouslyDisableDefaultAuthPolicy: true
+    externalAccess:
+      - type: static
+        options:
+          # Notice: This test-token can be used to add notifications to the backstage demo application.
+          # Production enironments should define a token in a more secure way that supports rotation.
+          token: test-token
+          subject: test-subject
+
 integrations:
   github:
     - host: github.com
@@ -63,10 +74,18 @@ techdocs:
     type: 'local' # Alternatives - 'googleGcs' or 'awsS3'. Read documentation for using alternatives.
 
 auth:
+  environment: development
   # see https://backstage.io/docs/auth/ to learn about auth providers
   providers:
     # See https://backstage.io/docs/auth/guest/provider
     guest: {}
+    github:
+      development:
+        clientId: ${GITHUB_CLIENT_ID}
+        clientSecret: ${GITHUB_CLIENT_SECRET}
+        signIn:
+          resolvers:
+            - resolver: usernameMatchingUserEntityName
 
 scaffolder:
   # see https://backstage.io/docs/features/software-templates/configuration for software template options
@@ -110,4 +129,4 @@ kubernetes:
 # see https://backstage.io/docs/permissions/getting-started for more on the permission framework
 permission:
   # setting this to `false` will disable permissions
-  enabled: true
+  enabled: false
