--- a/workspaces/global-header/plugins/global-header/package.json
+++ b/workspaces/global-header/plugins/global-header/package.json
@@ -37,6 +37,8 @@
     "@backstage/core-components": "^0.16.3",
     "@backstage/core-plugin-api": "^1.10.3",
     "@backstage/plugin-catalog-react": "^1.15.1",
+    "@backstage/plugin-notifications": "^0.5.1",
+    "@backstage/plugin-notifications-common": "^0.0.8",
     "@backstage/plugin-search": "^1.4.22",
     "@backstage/plugin-search-backend": "^1.8.1",
     "@backstage/plugin-search-backend-module-catalog": "^0.3.0",
@@ -44,6 +46,7 @@
     "@backstage/plugin-search-backend-module-techdocs": "^0.3.5",
     "@backstage/plugin-search-common": "^1.2.17",
     "@backstage/plugin-search-react": "^1.8.5",
+    "@backstage/plugin-signals-react": "^0.0.9",
     "@backstage/theme": "^0.6.3",
     "@mui/icons-material": "5.16.13",
     "@mui/material": "5.16.13",
