--- a/workspaces/global-header/packages/app/package.json
+++ b/workspaces/global-header/packages/app/package.json
@@ -33,11 +33,13 @@
     "@backstage/plugin-catalog-import": "^0.12.9",
     "@backstage/plugin-catalog-react": "^1.15.1",
     "@backstage/plugin-kubernetes": "^0.12.3",
+    "@backstage/plugin-notifications": "0.5.1",
     "@backstage/plugin-org": "^0.6.35",
     "@backstage/plugin-permission-react": "^0.4.30",
     "@backstage/plugin-scaffolder": "^1.27.4",
     "@backstage/plugin-search": "^1.4.22",
     "@backstage/plugin-search-react": "^1.8.5",
+    "@backstage/plugin-signals": "0.0.15",
     "@backstage/plugin-techdocs": "^1.12.1",
     "@backstage/plugin-techdocs-module-addons-contrib": "^1.1.20",
     "@backstage/plugin-techdocs-react": "^1.2.13",
