--- a/workspaces/global-header/packages/backend/package.json
+++ b/workspaces/global-header/packages/backend/package.json
@@ -31,7 +31,10 @@
     "@backstage/plugin-catalog-backend": "^1.30.0",
     "@backstage/plugin-catalog-backend-module-logs": "^0.1.6",
     "@backstage/plugin-catalog-backend-module-scaffolder-entity-model": "^0.2.4",
+    "@backstage/plugin-events-backend": "0.4.1",
     "@backstage/plugin-kubernetes-backend": "^0.19.2",
+    "@backstage/plugin-notifications-backend": "0.5.1",
+    "@backstage/plugin-notifications-backend-module-email": "0.3.5",
     "@backstage/plugin-permission-backend": "^0.5.53",
     "@backstage/plugin-permission-backend-module-allow-all-policy": "^0.2.4",
     "@backstage/plugin-permission-common": "^0.8.4",
@@ -44,6 +47,7 @@
     "@backstage/plugin-search-backend-module-pg": "^0.5.40",
     "@backstage/plugin-search-backend-module-techdocs": "^0.3.5",
     "@backstage/plugin-search-backend-node": "^1.3.7",
+    "@backstage/plugin-signals-backend": "0.3.0",
     "@backstage/plugin-techdocs-backend": "^1.11.5",
     "app": "link:../app",
     "better-sqlite3": "^9.0.0",
