docs(global-header): add initial tech docs (#413)
Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

--- a/workspaces/global-header/app-config.yaml
+++ b/workspaces/global-header/app-config.yaml
@@ -99,15 +99,14 @@ catalog:
   locations:
     # Local example data, file locations are relative to the backend process, typically `packages/backend`
     - type: file
-      target: ../../examples/entities.yaml
+      target: ../../catalog-info.yaml
 
-    # Local example template
+    - type: file
+      target: ../../examples/entities.yaml
     - type: file
       target: ../../examples/template/template.yaml
       rules:
         - allow: [Template]
-
-    # Local example organizational data
     - type: file
       target: ../../examples/org.yaml
       rules:
