--- a/workspaces/global-header/catalog-info.yaml
+++ b/workspaces/global-header/catalog-info.yaml
@@ -5,6 +5,7 @@ metadata:
   title: RHDH Global Header plugin
   description: The global header plugins provides an extendable way for the RHDH header. It provides a set of default components and also allow other plugins can contribute components to the header.
   annotations:
+    backstage.io/techdocs-ref: dir:.
     github.com/project-slug: redhat-developer/rhdh-plugins
     github.com/team-slug: redhat-developer/rhdh-plugins-contributers
     #sonarqube.org/project-key: redhat-developer_rhdh-plugins
@@ -14,7 +15,7 @@ metadata:
     - plugin
 spec:
   type: backstage-plugin
-  lifecycle: development
+  lifecycle: production
   owner: rhdh-ui-team
   system: rhdh
   subcomponentOf: rhdh-plugins
