--- a/workspaces/orchestrator/packages/backend/package.json
+++ b/workspaces/orchestrator/packages/backend/package.json
@@ -30,6 +30,7 @@
     "@backstage/plugin-auth-backend-module-guest-provider": "^0.2.1",
     "@backstage/plugin-auth-node": "^0.5.3",
     "@backstage/plugin-catalog-backend": "^1.27.1",
+    "@backstage/plugin-catalog-backend-module-gitlab": "^0.6.2",
     "@backstage/plugin-catalog-backend-module-logs": "^0.1.3",
     "@backstage/plugin-catalog-backend-module-scaffolder-entity-model": "^0.2.1",
     "@backstage/plugin-notifications-backend": "^0.4.3",
@@ -40,6 +41,7 @@
     "@backstage/plugin-proxy-backend": "^0.5.7",
     "@backstage/plugin-scaffolder-backend": "^1.26.2",
     "@backstage/plugin-scaffolder-backend-module-github": "^0.5.5",
+    "@backstage/plugin-scaffolder-backend-module-gitlab": "^0.7.1",
     "@backstage/plugin-search-backend": "^1.6.1",
     "@backstage/plugin-search-backend-module-catalog": "^0.2.4",
     "@backstage/plugin-search-backend-module-pg": "^0.5.37",
