chore(orchestrator): add export-dynamic to scaffolder orchestrator (#389)
* chore(orchestrator): add export-dynamic to scaffolder orchestrator

Signed-off-by: Marek Libra <marek.libra@gmail.com>

* chore(orchestrator): export scaffolder module as a dynamic plugin

add @red-hat-developer-hub org to the scaffolder module name
update @janus-idp/cli to 3.2.0 from 1.19.1
embed dependencies to pass d/s dynamic plugin build

and additional related fixes.

Signed-off-by: Marek Libra <marek.libra@gmail.com>

* yarn fix --publish

---------

Signed-off-by: Marek Libra <marek.libra@gmail.com>

--- a/workspaces/orchestrator/packages/backend/package.json
+++ b/workspaces/orchestrator/packages/backend/package.json
@@ -50,8 +50,8 @@
     "@backstage/plugin-signals-backend": "^0.2.3",
     "@backstage/plugin-techdocs-backend": "^1.11.1",
     "@red-hat-developer-hub/backstage-plugin-orchestrator-backend": "workspace:^",
+    "@red-hat-developer-hub/backstage-plugin-scaffolder-backend-module-orchestrator": "workspace:^",
     "app": "link:../app",
-    "backstage-plugin-scaffolder-backend-module-orchestrator": "^0.1.0",
     "better-sqlite3": "^9.0.0",
     "node-gyp": "^10.0.0",
     "pg": "^8.11.3",
