--- a/workspaces/orchestrator/plugins/scaffolder-backend-module-orchestrator/package.json
+++ b/workspaces/orchestrator/plugins/scaffolder-backend-module-orchestrator/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "backstage-plugin-scaffolder-backend-module-orchestrator",
+  "name": "@red-hat-developer-hub/backstage-plugin-scaffolder-backend-module-orchestrator",
   "description": "The orchestrator module for @backstage/plugin-scaffolder-backend",
   "version": "0.1.0",
   "main": "src/index.ts",
   "types": "src/index.ts",
   "license": "Apache-2.0",
-  "private": true,
   "publishConfig": {
-    "access": "public",
-    "main": "dist/index.cjs.js",
-    "types": "dist/index.d.ts"
+    "access": "public"
   },
   "repository": {
     "type": "git",
@@ -19,7 +16,32 @@
   "backstage": {
     "role": "backend-plugin-module",
     "pluginId": "scaffolder",
+    "supported-versions": "1.32.5",
+    "pluginPackages": [
+      "@red-hat-developer-hub/backstage-plugin-orchestrator-common",
+      "@red-hat-developer-hub/backstage-plugin-scaffolder-backend-module-orchestrator"
+    ],
     "pluginPackage": "@backstage/plugin-scaffolder-backend"
+  },
+  "bugs": "https://github.com/redhat-developer/rhdh-plugins/issues",
+  "keywords": [
+    "support:tech-preview",
+    "lifecycle:active",
+    "backstage",
+    "plugin",
+    "orchestrator",
+    "workflows"
+  ],
+  "exports": {
+    ".": "./src/index.ts",
+    "./package.json": "./package.json"
+  },
+  "typesVersions": {
+    "*": {
+      "package.json": [
+        "package.json"
+      ]
+    }
   },
   "scripts": {
     "start": "backstage-cli package start",
@@ -32,7 +54,8 @@
     "prettier:check": "prettier --ignore-unknown --check .",
     "prettier:fix": "prettier --ignore-unknown --write .",
     "lint:check": "backstage-cli package lint",
-    "lint:fix": "backstage-cli package lint --fix"
+    "lint:fix": "backstage-cli package lint --fix",
+    "export-dynamic": "janus-cli package export-dynamic-plugin --no-embed-as-dependencies --embed-package '@red-hat-developer-hub/backstage-plugin-orchestrator-common'"
   },
   "dependencies": {
     "@backstage/backend-plugin-api": "^1.0.2",
@@ -40,15 +63,25 @@
     "@backstage/plugin-scaffolder-node": "^0.6.0",
     "@backstage/types": "^1.2.1",
     "@red-hat-developer-hub/backstage-plugin-orchestrator-common": "workspace:^",
-    "axios": "^1.7.7",
+    "axios": "^1.7.9",
     "js-yaml": "^4.1.0"
   },
   "devDependencies": {
     "@backstage/cli": "^0.29.0",
     "@backstage/plugin-scaffolder-node-test-utils": "^0.1.15",
+    "@janus-idp/cli": "3.2.0",
     "@spotify/prettier-config": "^15.0.0"
   },
   "files": [
-    "dist"
+    "app-config.yaml",
+    "dist",
+    "dist-dynamic/*.*",
+    "dist-dynamic/dist/**",
+    "static"
+  ],
+  "maintainers": [
+    "@mlibra",
+    "@batzionb",
+    "@gciavarrini"
   ]
 }
