feat(global-header): refactoring (extract SupportButton, NotificationButton, Divider) (#415)
* feat(global-header): extract SupportButton component

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

* feat(global-header): extract NotificationButton component

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

* chore(global-header): add rhdh-theme for testing

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

* feat(global-header): renamed and refactore exported components, replaced slot config with divider component

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

* fix(global-header): add missing NotificationButton export

* fix(global-header): fix crash in SoftwareTemplatesSection

* fix(global-header): default to small icons

* fix(global-header): skip notification button when notification api is not available

* fix(global-header): default to small icons

* add a wraper for tooltip

Signed-off-by: Yi Cai <yicai@redhat.com>

* add wrapper to tooltip child

Signed-off-by: Yi Cai <yicai@redhat.com>

* updated report.api.md

Signed-off-by: Yi Cai <yicai@redhat.com>

* hide notifications button when plugin not enabled

Signed-off-by: Yi Cai <yicai@redhat.com>

* fixed unit tests

Signed-off-by: Yi Cai <yicai@redhat.com>

---------

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>
Signed-off-by: Yi Cai <yicai@redhat.com>
Co-authored-by: Yi Cai <yicai@redhat.com>

--- a/workspaces/global-header/app-config.yaml
+++ b/workspaces/global-header/app-config.yaml
@@ -1,6 +1,15 @@
 app:
-  title: Scaffolded Backstage App
+  title: RHDH Global Header Test App
   baseUrl: http://localhost:3000
+  support:
+    url: https://access.redhat.com/products/red-hat-developer-hub
+    items:
+      - title: Red Hat Developer Hub
+        links:
+          - url: https://access.redhat.com/products/red-hat-developer-hub
+            title: Product Info
+          - url: https://access.redhat.com/documentation/en-us/red_hat_developer_hub
+            title: Documentation
 
 organization:
   name: My Company
