--- a/workspaces/global-header/packages/app/package.json
+++ b/workspaces/global-header/packages/app/package.json
@@ -50,6 +50,7 @@
     "@mui/icons-material": "5.16.13",
     "@red-hat-developer-hub/backstage-plugin-global-header": "workspace:^",
     "@red-hat-developer-hub/backstage-plugin-global-header-test": "workspace:^",
+    "@redhat-developer/red-hat-developer-hub-theme": "^0.5.0",
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
     "react-router": "^6.3.0",
