--- a/workspaces/global-header/plugins/global-header/package.json
+++ b/workspaces/global-header/plugins/global-header/package.json
@@ -64,9 +64,11 @@
     "@backstage/cli": "^0.29.5",
     "@backstage/core-app-api": "^1.15.4",
     "@backstage/dev-utils": "^1.1.6",
+    "@backstage/frontend-test-utils": "^0.2.5",
     "@backstage/plugin-search-common": "^1.2.17",
     "@backstage/test-utils": "^1.7.4",
     "@openshift/dynamic-plugin-sdk": "^5.0.1",
+    "@redhat-developer/red-hat-developer-hub-theme": "^0.5.0",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.0.0",
