--- a/workspaces/orchestrator/packages/app/package.json
+++ b/workspaces/orchestrator/packages/app/package.json
@@ -20,31 +20,31 @@
   },
   "dependencies": {
     "@backstage-community/plugin-rbac": "^1.33.2",
-    "@backstage/app-defaults": "^1.5.12",
-    "@backstage/catalog-model": "^1.7.0",
-    "@backstage/cli": "^0.28.0",
-    "@backstage/core-app-api": "^1.15.1",
-    "@backstage/core-components": "^0.15.1",
-    "@backstage/core-plugin-api": "^1.10.0",
-    "@backstage/integration-react": "^1.2.0",
-    "@backstage/plugin-api-docs": "^0.11.11",
-    "@backstage/plugin-catalog": "^1.24.0",
-    "@backstage/plugin-catalog-common": "^1.1.0",
-    "@backstage/plugin-catalog-graph": "^0.4.11",
-    "@backstage/plugin-catalog-import": "^0.12.5",
-    "@backstage/plugin-catalog-react": "^1.14.0",
-    "@backstage/plugin-notifications": "^0.4.1",
-    "@backstage/plugin-org": "^0.6.31",
-    "@backstage/plugin-permission-react": "^0.4.27",
-    "@backstage/plugin-scaffolder": "^1.26.1",
-    "@backstage/plugin-search": "^1.4.18",
-    "@backstage/plugin-search-react": "^1.8.1",
-    "@backstage/plugin-signals": "^0.0.13",
-    "@backstage/plugin-techdocs": "^1.11.0",
-    "@backstage/plugin-techdocs-module-addons-contrib": "^1.1.16",
-    "@backstage/plugin-techdocs-react": "^1.2.9",
-    "@backstage/plugin-user-settings": "^0.8.14",
-    "@backstage/theme": "^0.6.0",
+    "@backstage/app-defaults": "^1.5.17-next.1",
+    "@backstage/catalog-model": "^1.7.3",
+    "@backstage/cli": "^0.30.0-next.3",
+    "@backstage/core-app-api": "^1.15.5-next.0",
+    "@backstage/core-components": "^0.16.4-next.1",
+    "@backstage/core-plugin-api": "^1.10.4-next.0",
+    "@backstage/integration-react": "^1.2.4-next.0",
+    "@backstage/plugin-api-docs": "^0.12.4-next.3",
+    "@backstage/plugin-catalog": "^1.27.0-next.3",
+    "@backstage/plugin-catalog-common": "^1.1.3",
+    "@backstage/plugin-catalog-graph": "^0.4.16-next.3",
+    "@backstage/plugin-catalog-import": "^0.12.10-next.3",
+    "@backstage/plugin-catalog-react": "^1.15.2-next.3",
+    "@backstage/plugin-notifications": "^0.5.2-next.2",
+    "@backstage/plugin-org": "^0.6.36-next.3",
+    "@backstage/plugin-permission-react": "^0.4.31-next.0",
+    "@backstage/plugin-scaffolder": "^1.28.0-next.3",
+    "@backstage/plugin-search": "^1.4.23-next.3",
+    "@backstage/plugin-search-react": "^1.8.6-next.3",
+    "@backstage/plugin-signals": "^0.0.16-next.1",
+    "@backstage/plugin-techdocs": "^1.12.3-next.3",
+    "@backstage/plugin-techdocs-module-addons-contrib": "^1.1.21-next.1",
+    "@backstage/plugin-techdocs-react": "^1.2.14-next.1",
+    "@backstage/plugin-user-settings": "^0.8.19-next.3",
+    "@backstage/theme": "^0.6.4-next.0",
     "@mui/icons-material": "5.16.13",
     "@mui/lab": "5.0.0-alpha.175",
     "@mui/material": "5.16.13",
@@ -59,7 +59,7 @@
     "react-use": "^17.4.0"
   },
   "devDependencies": {
-    "@backstage/test-utils": "^1.7.0",
+    "@backstage/test-utils": "^1.7.5-next.0",
     "@playwright/test": "^1.32.3",
     "@testing-library/dom": "^9.0.0",
     "@testing-library/jest-dom": "^6.0.0",
