--- a/workspaces/orchestrator/packages/backend/package.json
+++ b/workspaces/orchestrator/packages/backend/package.json
@@ -22,33 +22,33 @@
   },
   "dependencies": {
     "@backstage-community/plugin-rbac-backend": "^5.2.6",
-    "@backstage/backend-defaults": "^0.5.2",
-    "@backstage/config": "^1.2.0",
-    "@backstage/plugin-app-backend": "^0.3.76",
-    "@backstage/plugin-auth-backend": "^0.23.1",
-    "@backstage/plugin-auth-backend-module-github-provider": "^0.2.1",
-    "@backstage/plugin-auth-backend-module-guest-provider": "^0.2.1",
-    "@backstage/plugin-auth-node": "^0.5.3",
-    "@backstage/plugin-catalog-backend": "^1.27.1",
-    "@backstage/plugin-catalog-backend-module-gitlab": "^0.6.2",
-    "@backstage/plugin-catalog-backend-module-logs": "^0.1.3",
-    "@backstage/plugin-catalog-backend-module-scaffolder-entity-model": "^0.2.1",
-    "@backstage/plugin-notifications-backend": "^0.4.3",
-    "@backstage/plugin-permission-backend": "^0.5.50",
-    "@backstage/plugin-permission-backend-module-allow-all-policy": "^0.2.1",
-    "@backstage/plugin-permission-common": "^0.8.1",
-    "@backstage/plugin-permission-node": "^0.8.4",
-    "@backstage/plugin-proxy-backend": "^0.5.7",
-    "@backstage/plugin-scaffolder-backend": "^1.26.2",
-    "@backstage/plugin-scaffolder-backend-module-github": "^0.5.5",
-    "@backstage/plugin-scaffolder-backend-module-gitlab": "^0.7.1",
-    "@backstage/plugin-search-backend": "^1.6.1",
-    "@backstage/plugin-search-backend-module-catalog": "^0.2.4",
-    "@backstage/plugin-search-backend-module-pg": "^0.5.37",
-    "@backstage/plugin-search-backend-module-techdocs": "^0.3.1",
-    "@backstage/plugin-search-backend-node": "^1.3.4",
-    "@backstage/plugin-signals-backend": "^0.2.3",
-    "@backstage/plugin-techdocs-backend": "^1.11.1",
+    "@backstage/backend-defaults": "^0.8.0-next.3",
+    "@backstage/config": "^1.3.2",
+    "@backstage/plugin-app-backend": "^0.4.5-next.2",
+    "@backstage/plugin-auth-backend": "^0.24.3-next.3",
+    "@backstage/plugin-auth-backend-module-github-provider": "^0.3.0-next.2",
+    "@backstage/plugin-auth-backend-module-guest-provider": "^0.2.5-next.2",
+    "@backstage/plugin-auth-node": "^0.6.0-next.2",
+    "@backstage/plugin-catalog-backend": "^1.31.0-next.3",
+    "@backstage/plugin-catalog-backend-module-gitlab": "^0.6.3-next.3",
+    "@backstage/plugin-catalog-backend-module-logs": "^0.1.7-next.3",
+    "@backstage/plugin-catalog-backend-module-scaffolder-entity-model": "^0.2.5-next.3",
+    "@backstage/plugin-notifications-backend": "^0.5.2-next.3",
+    "@backstage/plugin-permission-backend": "^0.5.54-next.2",
+    "@backstage/plugin-permission-backend-module-allow-all-policy": "^0.2.5-next.2",
+    "@backstage/plugin-permission-common": "^0.8.4",
+    "@backstage/plugin-permission-node": "^0.8.8-next.2",
+    "@backstage/plugin-proxy-backend": "^0.5.11-next.2",
+    "@backstage/plugin-scaffolder-backend": "^1.30.0-next.3",
+    "@backstage/plugin-scaffolder-backend-module-github": "^0.6.0-next.2",
+    "@backstage/plugin-scaffolder-backend-module-gitlab": "^0.8.0-next.3",
+    "@backstage/plugin-search-backend": "^1.8.2-next.3",
+    "@backstage/plugin-search-backend-module-catalog": "^0.3.1-next.3",
+    "@backstage/plugin-search-backend-module-pg": "^0.5.41-next.2",
+    "@backstage/plugin-search-backend-module-techdocs": "^0.3.6-next.3",
+    "@backstage/plugin-search-backend-node": "^1.3.8-next.2",
+    "@backstage/plugin-signals-backend": "^0.3.1-next.2",
+    "@backstage/plugin-techdocs-backend": "^1.11.6-next.3",
     "@red-hat-developer-hub/backstage-plugin-orchestrator-backend": "workspace:^",
     "@red-hat-developer-hub/backstage-plugin-scaffolder-backend-module-orchestrator": "workspace:^",
     "app": "link:../app",
@@ -58,7 +58,7 @@
     "winston": "^3.2.1"
   },
   "devDependencies": {
-    "@backstage/cli": "^0.28.0",
+    "@backstage/cli": "^0.30.0-next.3",
     "@types/express": "^4.17.6",
     "@types/express-serve-static-core": "^4.17.5",
     "@types/luxon": "^2.0.4"
