--- a/workspaces/orchestrator/plugins/orchestrator-backend/package.json
+++ b/workspaces/orchestrator/plugins/orchestrator-backend/package.json
@@ -66,17 +66,17 @@
   },
   "dependencies": {
     "@backstage/backend-common": "^0.25.0",
-    "@backstage/backend-defaults": "^0.5.2",
-    "@backstage/backend-plugin-api": "^1.0.1",
+    "@backstage/backend-defaults": "^0.8.0-next.3",
+    "@backstage/backend-plugin-api": "^1.2.0-next.2",
     "@backstage/backend-tasks": "^0.6.1",
-    "@backstage/catalog-client": "^1.7.1",
-    "@backstage/errors": "^1.2.4",
-    "@backstage/integration": "^1.15.1",
-    "@backstage/plugin-catalog-node": "^1.13.1",
-    "@backstage/plugin-permission-common": "^0.8.1",
-    "@backstage/plugin-permission-node": "^0.8.4",
-    "@backstage/plugin-scaffolder-backend": "^1.26.2",
-    "@backstage/plugin-scaffolder-node": "^0.5.0",
+    "@backstage/catalog-client": "^1.9.1",
+    "@backstage/errors": "^1.2.7",
+    "@backstage/integration": "^1.16.1",
+    "@backstage/plugin-catalog-node": "^1.16.0-next.3",
+    "@backstage/plugin-permission-common": "^0.8.4",
+    "@backstage/plugin-permission-node": "^0.8.8-next.2",
+    "@backstage/plugin-scaffolder-backend": "^1.30.0-next.3",
+    "@backstage/plugin-scaffolder-node": "^0.7.0-next.2",
     "@red-hat-developer-hub/backstage-plugin-orchestrator-common": "workspace:^",
     "@urql/core": "^4.1.4",
     "ajv-formats": "^2.1.1",
@@ -91,8 +91,8 @@
   },
   "devDependencies": {
     "@backstage-community/plugin-rbac-common": "^1.12.1",
-    "@backstage/backend-test-utils": "1.0.2",
-    "@backstage/cli": "0.28.2",
+    "@backstage/backend-test-utils": "^1.3.0-next.3",
+    "@backstage/cli": "^0.30.0-next.3",
     "@janus-idp/backstage-plugin-audit-log-node": "^1.7.1",
     "@janus-idp/cli": "3.2.0",
     "@types/express": "4.17.21",
