--- a/workspaces/orchestrator/plugins/orchestrator-common/package.json
+++ b/workspaces/orchestrator/plugins/orchestrator-common/package.json
@@ -57,14 +57,14 @@
     "openapi:check": "./scripts/openapi.sh check"
   },
   "dependencies": {
-    "@backstage/plugin-permission-common": "^0.8.1",
+    "@backstage/plugin-permission-common": "^0.8.4",
     "@severlessworkflow/sdk-typescript": "^3.0.3",
     "axios": "^1.7.9",
     "js-yaml": "^4.1.0"
   },
   "devDependencies": {
-    "@backstage/cli": "0.28.2",
-    "@backstage/types": "^1.1.1",
+    "@backstage/cli": "^0.30.0-next.3",
+    "@backstage/types": "^1.2.1",
     "@openapitools/openapi-generator-cli": "2.16.3",
     "@types/json-schema": "7.0.15",
     "js-yaml-cli": "0.6.0"
