--- a/workspaces/orchestrator/plugins/orchestrator-form-api/package.json
+++ b/workspaces/orchestrator/plugins/orchestrator-form-api/package.json
@@ -27,7 +27,7 @@
     "prettier:fix": "prettier --ignore-unknown --write ."
   },
   "dependencies": {
-    "@backstage/core-plugin-api": "^1.10.0",
+    "@backstage/core-plugin-api": "^1.10.4-next.0",
     "@rjsf/core": "^5.21.2",
     "@rjsf/utils": "^5.21.2"
   },
@@ -35,8 +35,8 @@
     "react": "^16.13.1 || ^17.0.0 || ^18.0.0"
   },
   "devDependencies": {
-    "@backstage/cli": "0.28.2",
-    "@backstage/types": "^1.1.1",
+    "@backstage/cli": "^0.30.0-next.3",
+    "@backstage/types": "^1.2.1",
     "@types/json-schema": "7.0.15",
     "@types/react": "^18.2.58",
     "prettier": "3.4.2",
