--- a/workspaces/orchestrator/plugins/orchestrator-form-react/package.json
+++ b/workspaces/orchestrator/plugins/orchestrator-form-react/package.json
@@ -33,8 +33,8 @@
     "prettier:fix": "prettier --ignore-unknown --write ."
   },
   "dependencies": {
-    "@backstage/core-components": "^0.15.1",
-    "@backstage/core-plugin-api": "^1.10.0",
+    "@backstage/core-components": "^0.16.4-next.1",
+    "@backstage/core-plugin-api": "^1.10.4-next.0",
     "@material-ui/core": "^4.12.4",
     "@red-hat-developer-hub/backstage-plugin-orchestrator-form-api": "workspace:^",
     "@rjsf/core": "^5.21.2",
@@ -48,8 +48,8 @@
     "react": "^16.13.1 || ^17.0.0 || ^18.0.0"
   },
   "devDependencies": {
-    "@backstage/cli": "0.28.2",
-    "@backstage/types": "^1.1.1",
+    "@backstage/cli": "^0.30.0-next.3",
+    "@backstage/types": "^1.2.1",
     "@types/json-schema": "7.0.15",
     "@types/lodash": "^4.14.151",
     "@types/react": "^18.2.58",
