--- a/workspaces/orchestrator/plugins/orchestrator-swf-editor-envelope/package.json
+++ b/workspaces/orchestrator/plugins/orchestrator-swf-editor-envelope/package.json
@@ -42,7 +42,7 @@
     "monaco-editor": "^0.52.2"
   },
   "devDependencies": {
-    "@backstage/cli": "0.28.2",
+    "@backstage/cli": "^0.30.0-next.3",
     "clean-webpack-plugin": "4.0.0",
     "css-loader": "6.11.0",
     "filemanager-webpack-plugin": "8.0.0",
