--- a/workspaces/orchestrator/plugins/orchestrator/package.json
+++ b/workspaces/orchestrator/plugins/orchestrator/package.json
@@ -55,12 +55,12 @@
     "export-dynamic": "janus-cli package export-dynamic-plugin --in-place"
   },
   "dependencies": {
-    "@backstage/core-components": "0.15.1",
-    "@backstage/core-plugin-api": "1.10.0",
-    "@backstage/errors": "1.2.4",
-    "@backstage/plugin-catalog": "1.24.0",
-    "@backstage/plugin-permission-common": "^0.8.1",
-    "@backstage/plugin-permission-react": "0.4.27",
+    "@backstage/core-components": "^0.16.4-next.1",
+    "@backstage/core-plugin-api": "^1.10.4-next.0",
+    "@backstage/errors": "^1.2.7",
+    "@backstage/plugin-catalog": "^1.27.0-next.3",
+    "@backstage/plugin-permission-common": "^0.8.4",
+    "@backstage/plugin-permission-react": "^0.4.31-next.0",
     "@kie-tools-core/editor": "^0.32.0",
     "@kie-tools-core/notifications": "^0.32.0",
     "@kie-tools-core/react-hooks": "^0.32.0",
@@ -82,10 +82,10 @@
     "vscode-languageserver-types": "3.17.5"
   },
   "devDependencies": {
-    "@backstage/cli": "0.28.2",
-    "@backstage/dev-utils": "1.1.2",
-    "@backstage/test-utils": "1.7.0",
-    "@backstage/types": "1.1.1",
+    "@backstage/cli": "^0.30.0-next.3",
+    "@backstage/dev-utils": "^1.1.7-next.3",
+    "@backstage/test-utils": "^1.7.5-next.0",
+    "@backstage/types": "^1.2.1",
     "@janus-idp/cli": "3.2.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
