--- a/workspaces/orchestrator/plugins/scaffolder-backend-module-orchestrator/package.json
+++ b/workspaces/orchestrator/plugins/scaffolder-backend-module-orchestrator/package.json
@@ -58,17 +58,17 @@
     "export-dynamic": "janus-cli package export-dynamic-plugin --no-embed-as-dependencies --embed-package '@red-hat-developer-hub/backstage-plugin-orchestrator-common'"
   },
   "dependencies": {
-    "@backstage/backend-plugin-api": "^1.0.2",
-    "@backstage/catalog-model": "^1.7.0",
-    "@backstage/plugin-scaffolder-node": "^0.6.0",
+    "@backstage/backend-plugin-api": "^1.2.0-next.2",
+    "@backstage/catalog-model": "^1.7.3",
+    "@backstage/plugin-scaffolder-node": "^0.7.0-next.2",
     "@backstage/types": "^1.2.1",
     "@red-hat-developer-hub/backstage-plugin-orchestrator-common": "workspace:^",
     "axios": "^1.7.9",
     "js-yaml": "^4.1.0"
   },
   "devDependencies": {
-    "@backstage/cli": "^0.29.0",
-    "@backstage/plugin-scaffolder-node-test-utils": "^0.1.15",
+    "@backstage/cli": "^0.30.0-next.3",
+    "@backstage/plugin-scaffolder-node-test-utils": "^0.1.19-next.3",
     "@janus-idp/cli": "3.2.0",
     "@spotify/prettier-config": "^15.0.0"
   },
